--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, sans-serif;
     padding: 20px;
 }
+
 table {
     border-collapse: collapse;
     width: 100%;
@@ -26,6 +27,12 @@ input {
     margin: 0 auto;
     text-align: center;
 }
+.name-table {
+    margin: 0 auto;
+    text-align: center; 
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 .table-box {
     display: flex;
     flex-direction: column; 
@@ -37,6 +44,30 @@ input {
     align-items: center;
     justify-content: center;
 }
+.button {
+    height: 35px;
+    width: 100px;
+    font-weight: 600;
+    color: #ffffff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+}
+.button:hover {
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+    background-color: #0056b3; 
+    cursor: pointer; 
+}
 .alert {
     color: red; 
+}
+.safe {
+    color: green;
+}
+.result1 {
+    font-size: 20px;
+    margin-top: 20px;
 }
